--- a/test.html
+++ b/test.html
@@ -1,1 +1,23 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Traffic Light</title>
+    <link rel="stylesheet" href="this.css">
+</head>
+<body>
+    <div class="traffic-light">
+        <div class="light red" id="red"></div>
+        <div class="light yellow" id="yellow"></div>
+        <div class="light green" id="green"></div>
+    </div>
+<Div>
 
+    <div class="Text" id="T">Trafake Layt</div>
+</Div>
+
+
+    <script src="It.js"></script>
+</body>
+</html>
