--- a/Traffic Lights/Bulb.html
+++ b/Traffic Lights/Bulb.html
@@ -14,5 +14,7 @@
 
 <button onclick="document.getElementById('myImage').src='off.jpg'">Turn off the light</button>
 
+<script src="Lightson.js"></script>
+
 </body>
 </html>
