--- a/Traffic Lights/Traff.html
+++ b/Traffic Lights/Traff.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Traffic Light</title>
-    <link rel="stylesheet" href="this.css">
+    <link rel="stylesheet" href="Traffi.css">
 </head>
 <body>
     <div class="traffic-light">
@@ -18,6 +18,6 @@
 </Div>
 
 
-    <script src="It.js"></script>
+    <script src="Traffik.js"></script>
 </body>
 </html>
