--- a/Traffic Lights/Navigation.html
+++ b/Traffic Lights/Navigation.html
@@ -14,17 +14,19 @@
     <div class="dropdown">
         <button class="dropbtn">Activities</button>
         <div class="dropdown-content">
-            <a href="Bulb.html">Lights</a>
+            <a href="Bulb.html" target="Frame">Lights</a>
                 <button class="dropbtn">Lights</button>
                 <div class="dropdown-content">
-                    <a href="Traff.html">Traffic Lights</a>
+                    <a href="Traff.html" target="Frame">Traffic Lights</a>
                 </div>
         </div>
     </div> 
 
     <a href="#articles">Articles</a>
     <a href="#inspiration">Inspiration</a>
+    <iframe name="Frame" width="100%" height="500px" style="border: none;"></iframe>
 </div>
 
+    <iframe name="Frame"></iframe>
 </body>
 </html>
