--- a/Traffic Lights/Bulb.html
+++ b/Traffic Lights/Bulb.html
@@ -8,13 +8,13 @@
 </head>
 <body>
 
-<div class="container">
-    <button id="onButton" onclick="toggleLight('on')">On Lights</button>
-    <button id="offButton" onclick="toggleLight('off')">Off Lights</button>
-
-    <div id="lightContainer" class="light-container">
-        <img id="lightImage" src="Traffic Lights/off.jpg" alt="Light" />
+    <div class="container">
+        <button onclick="toggleLight('on')">On Lights</button>
+        <button onclick="toggleLight('off')">Off Lights</button>
+        
+        <img id="lightImage" src="Traffic Lights/off.png" alt="Light" />
     </div>
+
 </div>
     <script src="Lightson.js"></script>
 </body>
