--- a/Traffic Lights/Bulb.html
+++ b/Traffic Lights/Bulb.html
@@ -12,7 +12,7 @@
         <button onclick="toggleLight('on')">On Lights</button>
         <button onclick="toggleLight('off')">Off Lights</button>
         
-        <img id="lightImage" src="Traffic Lights/off.png" alt="Light" />
+        <img id="lightImage" src="off.jpg" alt="Light" />
     </div>
 
 </div>
