--- a/Traffic Lights/Bulb.html
+++ b/Traffic Lights/Bulb.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Light Switch</title>
-    <link rel="stylesheet" href="Light.css">
+    <title>Bulb On/Off</title>
+    <link rel="stylesheet" href="Light.css"> <!-- Link to the external CSS file -->
 </head>
 <body>
-
     <div class="container">
-        <button onclick="toggleLight('on')">On Lights</button>
-        <button onclick="toggleLight('off')">Off Lights</button>
-        
-        <img id="lightImage" src="off.jpg" alt="Light" />
+        <img id="bulbImage" src="Traffic Lights/off.jpg" alt="Bulb" style="display: none;">
+        <img id="offImage" src="Traffic Lights/on.jpg" alt="Off Bulb" style="display: block;"> 
+        <div>
+            <button onclick="turnOn()">Turn On</button>
+            <button onclick="turnOff()">Turn Off</button>
+        </div>
     </div>
 
-</div>
-    <script src="Lightson.js"></script>
+    <script src="Lightson.js"></script> 
 </body>
 </html>
