--- a/TrafficLights/Bulb.html
+++ b/TrafficLights/Bulb.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div class="container">
-        <img id="bulbImage" src="Traffic Lights/off.jpg" alt="Bulb" style="display: none;">
-        <img id="offImage" src="Traffic Lights/on.jpg" alt="Off Bulb" style="display: block;"> 
+        <img id="bulbImage" src="/TrafficLights/on.png" alt="Bulb" style="display: none;">
+        <img id="offImage" src="/TrafficLights/off.png" alt="Off Bulb" style="display: block;"> 
         <div>
             <button onclick="turnOn()">Turn On</button>
             <button onclick="turnOff()">Turn Off</button>
