--- a/TrafficLights/Bulb.html
+++ b/TrafficLights/Bulb.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bulb On/Off</title>
-    <link rel="stylesheet" href="Light.css"> <!-- Link to the external CSS file -->
+    <link rel="stylesheet" href="Light.css"> 
 </head>
 <body>
     <div class="container">
