--- a/2026 calendar/Calendar.html
+++ b/2026 calendar/Calendar.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>2026 Calendar</title>
-  <link rel="stylesheet" href="dates.css" />
+  <link rel="stylesheet" href="Style.css" />
 </head>
 <body>
   <div class="calendar-container" id="calendar-container">
@@ -12,6 +12,6 @@
     <div id="calendar"></div>
   </div>
 
-  <script src="datez.js"></script>
+  <script src="lastname.js"></script>
 </body>
 </html>
